// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-content-search #render should render default control no props 1`] = `
<gux-content-search>
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
    </div>
  </template>
  <input type="text">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control no props With placeholder 1`] = `
<gux-content-search>
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
    </div>
  </template>
  <input type="text" placeholder="Search">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props 1`] = `
<gux-content-search current-match="1" match-count="10">
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel" aria-disabled="false">
          <span class="gux-navigation-result">
            1 of 10
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" placeholder="Search" value="Default Search Text">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode 1`] = `
<gux-content-search current-match="10" match-count="10">
  <template shadowrootmode="open">
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            10 of 10
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" disabled="true" placeholder="Search" value="Search Disabled">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with 1 match 1`] = `
<gux-content-search current-match="1" match-count="1">
  <template shadowrootmode="open">
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            1 of 1
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" disabled="true" placeholder="Search" value="Search Disabled with 1 match">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with 100000000 match 1`] = `
<gux-content-search current-match="10000" match-count="100000000">
  <template shadowrootmode="open">
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            10,000 of 100,000,000
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" disabled="true" placeholder="Search" value="Search Disabled with big match">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with long value 1`] = `
<gux-content-search current-match="1" match-count="1">
  <template shadowrootmode="open">
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            1 of 1
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" disabled="true" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with long value with 100000000 match 1`] = `
<gux-content-search current-match="1100" match-count="100000001">
  <template shadowrootmode="open">
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            1,100 of 100,000,001
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" disabled="true" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <template shadowrootmode="open">
    <div class="gux-content-search gux-disabled">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            0 of 0
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" disabled="true" placeholder="Search" value="Search Disabled with no Match">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with invalid  match count 1`] = `
<gux-content-search current-match="1000" match-count="abc">
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            0 of 0
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with invalid current match 1`] = `
<gux-content-search current-match="100000" match-count="100">
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel" aria-disabled="false">
          <span class="gux-navigation-result">
            0 of 100
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text 1 match 1`] = `
<gux-content-search current-match="1" match-count="1">
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel" aria-disabled="false">
          <span class="gux-navigation-result">
            1 of 1
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text 100000 match 1`] = `
<gux-content-search current-match="1000" match-count="100000">
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel" aria-disabled="false">
          <span class="gux-navigation-result">
            1,000 of 100,000
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            0 of 0
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" placeholder="Search" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel gux-navigation-disabled" aria-disabled="true">
          <span class="gux-navigation-result gux-navigation-result-disabled">
            0 of 0
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match" disabled="">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear" disabled="">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" placeholder="Search" value="Default Search Text">
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with short text 100000 match 1`] = `
<gux-content-search current-match="1000" match-count="100000">
  <template shadowrootmode="open">
    <div class="gux-content-search">
      <div class="gux-search-icon">
        <gux-icon size="small" decorative="" icon-name="fa/magnifying-glass-regular">
        </gux-icon>
      </div>
      <slot>
      </slot>
      <div class="gux-content-control-panel">
        <div class="gux-navigation-panel" aria-disabled="false">
          <span class="gux-navigation-result">
            1,000 of 100,000
          </span>
          <div class="gux-navigation-buttons">
            <button type="button" class="gux-previous-button" title="Highlight previous match" aria-label="Highlight previous match">
              <gux-icon decorative="" icon-name="fa/caret-up-solid" size="small">
              </gux-icon>
            </button>
            <button type="button" class="gux-next-button" title="Highlight next match" aria-label="Highlight next match">
              <gux-icon decorative="" icon-name="fa/caret-down-solid" size="small">
              </gux-icon>
            </button>
          </div>
          <div class="gux-navigation-divider">
          </div>
        </div>
        <button class="gux-clear-button" tabindex="-1" type="button" title="Clear">
          <gux-icon icon-name="fa/xmark-large-regular" decorative="" size="small">
          </gux-icon>
        </button>
      </div>
    </div>
  </template>
  <input type="text" placeholder="Search" value="Lorem ipsum dolor ">
</gux-content-search>
`;
